--- a/views/dashVendor/navbarVendor.ejs
+++ b/views/dashVendor/navbarVendor.ejs
@@ -34,7 +34,7 @@
                 <li><a href="#">Selesai</a></li>
             </ul>
         </li>
-
+        <li><a href="/vendor/pengaturan-akun"><span class="las la-user"></span>Akun Saya</a></li>
         <li><a href="/vendor/logout">Logout</a></li>
     </ul>
 </nav>
