--- a/views/dashAdmin/form_PKS/pembuatanAkunVendor.ejs
+++ b/views/dashAdmin/form_PKS/pembuatanAkunVendor.ejs
@@ -86,7 +86,7 @@
             <div class="col-sm-8">
 
               <input type="text" class="form-control" id="nama_toko_vendor" name="nama_toko_vendor"
-                placeholder="Contoh: Mitra Iklan Digital">
+                 value="<%= data.pt_mitra %>" readonly>
             </div>
           </div>
 
